package rom.calculadora.domain.operacion;

public interface Operacion {
    double ejecutar(double a, double b);
}
